--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,40 @@
 theme: jekyll-theme-cayman
+
+## Eursunpillar的个人网站
+
+You can use the [editor on GitHub](https://github.com/Eursunpillar/Eursunpillar.github.io/edit/main/README.md) to maintain and preview the content for your website in Markdown files.
+
+Whenever you commit to this repository, GitHub Pages will run [Jekyll](https://jekyllrb.com/) to rebuild the pages in your site, from the content in your Markdown files.
+
+### 歌词创作
+
+我从迷茫中醒来，
+
+你在绝望中离开。
+
+悲伤得石沉大海，
+
+开心得正中下怀。
+
+有人问你是否还在？
+
+凄风苦雨再戍轮台。
+
+有人问我有何能耐？
+
+渺渺星辰点点微埃。
+
+爱，不会再来；
+
+恨，冰释谁怀？
+
+再忆起时是谁的不该？
+
+再忆起时已青云之外。
+### 朗读
+
+倾情朗读 [课文朗读《项脊轩志》 情见乎辞，物在人亡](https://www.bilibili.com/video/BV1RL4y1e712/). 欢迎给我在B站上的音频投稿 `一键三连` 哦.
+
+### 其他
+
+[《春》朗读](https://www.bilibili.com/audio/au2502028?type=3&spm_id_from=333.999.0.0) .
