--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,6 @@ theme: jekyll-theme-cayman
 
 ## Eursunpillar的个人网站
 
-You can use the [editor on GitHub](https://github.com/Eursunpillar/Eursunpillar.github.io/edit/main/README.md) to maintain and preview the content for your website in Markdown files.
-
-Whenever you commit to this repository, GitHub Pages will run [Jekyll](https://jekyllrb.com/) to rebuild the pages in your site, from the content in your Markdown files.
 
 ### 歌词创作
 
@@ -33,7 +30,9 @@ Whenever you commit to this repository, GitHub Pages will run [Jekyll](https://j
 再忆起时已青云之外。
 ### 朗读
 
-倾情朗读 [课文朗读《项脊轩志》 情见乎辞，物在人亡](https://www.bilibili.com/video/BV1RL4y1e712/). 欢迎给我在B站上的音频投稿 `一键三连` 哦.
+倾情朗读 [课文朗读《项脊轩志》 情见乎辞，物在人亡](https://www.bilibili.com/video/BV1RL4y1e712/). 
+
+欢迎给我在B站上的音频投稿 `一键三连` 哦.
 
 ### 其他
 
