--- a/_config.yml
+++ b/_config.yml
@@ -37,3 +37,23 @@ theme: jekyll-theme-cayman
 ### 其他
 
 [《春》朗读](https://www.bilibili.com/audio/au2502028?type=3&spm_id_from=333.999.0.0) .
+
+### 知乎读后感
+`仁者见仁，智者见智，杠者抬杠
+
+简单的说，传统形而上学是指不依赖任何经验证据，通过纯粹的思辨和理性演绎，推导出世界的本质和演化规律的学说。
+
+就好比一个物理假说，始终需要实验数据才能证明它是正确的，但形而上学则像数学一样，只需要几个简单的公理假设和基本的演绎和归纳法则就可以开枝散叶。
+
+这个说法源自黑格尔对这种旧形而上学的批判，由于形式逻辑的局限，旧形而上学必定会遇到二律背反现象，
+
+即对同一个事物所形成的两种学说，虽然逻辑上各自成立却相互矛盾的现象，因此黑格尔提出了辩证逻辑以突破这种困境。
+
+在黑格尔的学说中，旧形而上学中概念间的绝对对立性被消解，矛盾的概念之间也会产生动态的有机关联，因此对黑格尔而言旧形而上学是孤立的、静止的，是反辩证法的。
+
+而对于马哲而言，黑格尔超越旧形而上学的尝试由于有唯心主义色彩而具有形而上学残余，
+
+再后来到了某前大国的大众宣传手册和教材上，孤立、静止、片面的描述被部分扭曲性地固定下来，并扩大化到一切形而上学范围。
+
+很可惜的是很多人因为这样一句简单的描述就对形而上学充满不屑与蔑视，但其实形而上学的发展史是人类思想的一次波澜壮阔的旅程。
+`
