--- a/_config.yml
+++ b/_config.yml
@@ -39,7 +39,8 @@ theme: jekyll-theme-cayman
 [《春》朗读](https://www.bilibili.com/audio/au2502028?type=3&spm_id_from=333.999.0.0) .
 
 ### 知乎读后感
-`仁者见仁，智者见智，杠者抬杠
+`
+仁者见仁，智者见智，杠者抬杠
 
 简单的说，传统形而上学是指不依赖任何经验证据，通过纯粹的思辨和理性演绎，推导出世界的本质和演化规律的学说。
 
